--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,16 @@
-/* --- STYLES FOR ALL PAGES --- */
+/* --- STYLES FOR ALL PAGES--- */
+
+a, a:hover, a:focus, a:active, a:visited {
+  text-decoration: none;
+  color: #4aaaa5;
+}
+
 body {
   /* Typography */
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 
   /* Visual */
-  background-image: url("../imgs/ignasi_pattern_s.png");
+  /* background-image: url("../imgs/ignasi_pattern_s.png"); */
 }
 
 html {
@@ -56,6 +62,22 @@ main {
 .navbar {
   background: white;
   border: none;
+}
+
+.navbar-brand {
+  padding: 7px;
+}
+
+.navbar-nav {
+    display: flex;
+    align-items: center;
+}
+
+.icon {
+    font-size: 1.6rem;
+    color: #4aaaa5;
+    padding-left: .5rem;
+    padding-right: .5rem;
 }
 
 /* media query for nav background color change */
@@ -145,6 +167,9 @@ main {
 }
 /* END ABOUT-ME PAGE */
 
+.embed-responsive {
+  z-index: 5;
+}
 
 /* PORTFOLIO PAGE */
 .port-image {
@@ -153,32 +178,4 @@ main {
 /* END PORTFOLIO PAGE */
 
 
-/* CONTACT FORM PAGE  */
-.form-control {
-  /* give input boxes right angles */
-  border-radius: 0;
 
-  /* keep from horizontally resizing text area */
-  min-width: 100%;
-  max-width: 100%;
-}
-
-.submit-btn {
-  /* Box-model */
-  padding: 15px 30px;
-  font-size: 16px;
-  font-weight: lighter;
-
-  /* Typography */
-  color: #fff;
-
-  /* Visual */
-  background-color: #4aaaa5;
-  border: 0;
-}
-
-.submit-btn:hover {
-  opacity: .7;
-}
-
-/* END CONTACT FORM PAGE */
